--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </span>
           <span class="button-title">GitHub</span>
         </a>
-        <a href="https://github.com/zoomerJon" target="_blank" class="button">
+        <div href="https://github.com/zoomerJon" target="_blank" class="button">
           <span class="icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -60,7 +60,7 @@
             </svg>
           </span>
           <span class="button-title">Email: jovalleweb@gmail.com</span>
-        </a>
+        </div>
       </div>
     </div>
     <div id="root"></div>
