--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>My Portfolio</title>
     <style>
       #root {
         width: 100vw;
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div class="test">
+    <div class="test" id="profile">
       <div class="profile-container">
         <img src="/me.jpg" />
         <div class="name">Jonathan Ovalle</div>
