--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portfolio</title>
     <style>
       #root {
-        width: 100vw;
+        width: 100%;
         height: 100vh;
       }
     </style>
