--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="/me.jpg" />
         <div class="name">Jonathan Ovalle</div>
         <div class="profile-description">
-          A freelance web developer based in Las Vegas
+          A web developer based in Las Vegas
         </div>
         <a href="https://github.com/zoomerJon" target="_blank" class="button">
           <span class="icon">
